<resources>
    <string name="app_name">RecyclerViewRoomdatabase</string>
    <string name="all">All</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_description">Enter Description</string>
    <string name="add">Add</string>
    <string name="app">App</string>
</resources>